[gd_scene load_steps=49 format=2]

[ext_resource path="res://Main/Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Main/Scripts/Graph.gd" type="Script" id=2]
[ext_resource path="res://Main/Scripts/Buttons.gd" type="Script" id=3]
[ext_resource path="res://GraphNodes/ResourceNode.tscn" type="PackedScene" id=4]
[ext_resource path="res://GraphNodes/ProcessNode.tscn" type="PackedScene" id=5]
[ext_resource path="res://GraphNodes/Connection.tscn" type="PackedScene" id=6]
[ext_resource path="res://Main/Scripts/Console.gd" type="Script" id=7]
[ext_resource path="res://Main/Scripts/Matrix.gd" type="Script" id=8]
[ext_resource path="res://UI/Menu.tscn" type="PackedScene" id=9]
[ext_resource path="res://Main/UILayer.gd" type="Script" id=10]
[ext_resource path="res://Fonts/arialbd.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Fonts/ariali.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Fonts/arialbi.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Fonts/arial.ttf" type="DynamicFontData" id=14]

[sub_resource type="DynamicFont" id=1]
size = 14
use_mipmaps = true
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="InputEventAction" id=2]
action = "1"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 14
use_mipmaps = true
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="InputEventAction" id=5]
action = "2"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 14
use_mipmaps = true
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="InputEventAction" id=8]
action = "3"

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[sub_resource type="DynamicFont" id=10]
size = 14
use_mipmaps = true
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="InputEventAction" id=11]
action = "4"

[sub_resource type="ShortCut" id=12]
shortcut = SubResource( 11 )

[sub_resource type="DynamicFont" id=13]
size = 14
use_mipmaps = true
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="InputEventAction" id=14]
action = "5"

[sub_resource type="ShortCut" id=15]
shortcut = SubResource( 14 )

[sub_resource type="DynamicFont" id=16]
size = 14
use_mipmaps = true
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="InputEventAction" id=17]
action = "6"

[sub_resource type="ShortCut" id=18]
shortcut = SubResource( 17 )

[sub_resource type="DynamicFont" id=19]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=20]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=21]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=22]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=23]
size = 14
use_mipmaps = true
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=24]
size = 14
use_mipmaps = true
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=25]
size = 14
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=26]
size = 14
use_mipmaps = true
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="StyleBoxEmpty" id=27]

[sub_resource type="DynamicFont" id=28]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=29]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=30]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=31]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=32]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=33]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=34]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 14 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Graph" type="Node2D" parent="."]
script = ExtResource( 2 )
process_node = ExtResource( 5 )
resource_node = ExtResource( 4 )
connection = ExtResource( 6 )

[node name="GraphBackground" type="ColorRect" parent="Graph"]
margin_right = 640.0
margin_bottom = 620.0
hint_tooltip = "Clear the current graph"
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProcessNodeHolder" type="Node2D" parent="Graph"]

[node name="ResourceNodeHolder" type="Node2D" parent="Graph"]

[node name="ConnectionHolder" type="Node2D" parent="Graph"]

[node name="CanvasLayer" type="CanvasLayer" parent="Graph"]
layer = 10

[node name="Buttons" type="HBoxContainer" parent="Graph/CanvasLayer"]
margin_left = 8.0
margin_top = 3.0
margin_right = 649.0
margin_bottom = 38.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddProcess" type="Button" parent="Graph/CanvasLayer/Buttons"]
margin_right = 85.0
margin_bottom = 35.0
hint_tooltip = "When toggled, click within the white space to place a process node. Shortcut: 1"
custom_fonts/font = SubResource( 1 )
toggle_mode = true
shortcut_in_tooltip = false
shortcut = SubResource( 3 )
text = "Process (+)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddResource" type="Button" parent="Graph/CanvasLayer/Buttons"]
margin_left = 89.0
margin_right = 184.0
margin_bottom = 35.0
hint_tooltip = "When toggled, click within the white space to place a resource node. Shortcut: 2
"
custom_fonts/font = SubResource( 4 )
toggle_mode = true
shortcut_in_tooltip = false
shortcut = SubResource( 6 )
text = "Resource (+)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddConnection" type="Button" parent="Graph/CanvasLayer/Buttons"]
margin_left = 188.0
margin_right = 294.0
margin_bottom = 35.0
hint_tooltip = "When toggled, select a starting node followed by an ending node to create a directed edge connection.
Shortcut: 3"
custom_fonts/font = SubResource( 7 )
toggle_mode = true
shortcut_in_tooltip = false
shortcut = SubResource( 9 )
text = "Connection (+)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemoveNode" type="Button" parent="Graph/CanvasLayer/Buttons"]
margin_left = 298.0
margin_right = 363.0
margin_bottom = 35.0
hint_tooltip = "When toggled, click on a node to delete it.
Shortcut: 4"
custom_fonts/font = SubResource( 10 )
toggle_mode = true
shortcut_in_tooltip = false
shortcut = SubResource( 12 )
text = "Node (-)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemoveConnection" type="Button" parent="Graph/CanvasLayer/Buttons"]
margin_left = 367.0
margin_right = 470.0
margin_bottom = 35.0
hint_tooltip = "When toggled, click on a connection arrow to remove the connection.
Shortcut: 5"
custom_fonts/font = SubResource( 13 )
toggle_mode = true
shortcut_in_tooltip = false
shortcut = SubResource( 15 )
text = "Connection (-)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetResourceUnits" type="Button" parent="Graph/CanvasLayer/Buttons"]
margin_left = 474.0
margin_right = 579.0
margin_bottom = 35.0
hint_tooltip = "When toggled, click on a resource node, and then enter the number of units when prompted.
Shortcut: 6"
custom_fonts/font = SubResource( 16 )
toggle_mode = true
shortcut_in_tooltip = false
shortcut = SubResource( 18 )
text = "Set Resources"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clear" type="Button" parent="Graph/CanvasLayer/Buttons"]
margin_left = 583.0
margin_right = 627.0
margin_bottom = 35.0
hint_tooltip = "Clear the current graph."
text = "Clear"

[node name="Matrix" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="MatrixBackground" type="ColorRect" parent="Matrix"]
margin_left = 640.0
margin_right = 1280.0
margin_bottom = 620.0
mouse_filter = 2
color = Color( 0, 0.0470588, 0.301961, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Text" type="RichTextLabel" parent="Matrix/MatrixBackground"]
margin_left = 14.0
margin_top = 63.0
margin_right = 627.0
margin_bottom = 607.0
custom_fonts/bold_italics_font = SubResource( 19 )
custom_fonts/italics_font = SubResource( 20 )
custom_fonts/bold_font = SubResource( 21 )
custom_fonts/normal_font = SubResource( 22 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="HBoxContainer" parent="Matrix/MatrixBackground"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -417.0
margin_top = 3.0
margin_right = -3.00006
margin_bottom = 38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="Matrix/MatrixBackground/ButtonContainer"]
margin_right = 61.0
margin_bottom = 35.0
hint_tooltip = "Options Menu. Shortcut: esc key"
custom_fonts/font = SubResource( 23 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviewButton" type="Button" parent="Matrix/MatrixBackground/ButtonContainer"]
margin_left = 65.0
margin_right = 201.0
margin_bottom = 35.0
hint_tooltip = "Click to preview output before generating a file"
custom_fonts/font = SubResource( 24 )
text = "Preview File Output"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GenFileButton" type="Button" parent="Matrix/MatrixBackground/ButtonContainer"]
margin_left = 205.0
margin_right = 351.0
margin_bottom = 35.0
hint_tooltip = "Generate an output file with a specified file type and directory"
custom_fonts/font = SubResource( 25 )
text = "Generate Output File"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AboutButton" type="Button" parent="Matrix/MatrixBackground/ButtonContainer"]
margin_left = 355.0
margin_right = 404.0
margin_bottom = 35.0
hint_tooltip = "About this tool and its creator"
custom_fonts/font = SubResource( 26 )
text = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Matrix"]
margin_left = 650.0
margin_top = 10.0
margin_right = 710.0
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Console" type="Control" parent="."]
margin_top = 620.0
margin_bottom = 620.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConsoleBackground" type="ColorRect" parent="Console"]
margin_left = 1.437
margin_right = 1281.44
margin_bottom = 100.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prompt" type="RichTextLabel" parent="Console"]
margin_left = 4.0
margin_top = 2.0
margin_right = 1284.0
margin_bottom = 37.0
custom_styles/normal = SubResource( 27 )
custom_fonts/normal_font = SubResource( 28 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Indicator" type="RichTextLabel" parent="Console"]
margin_left = 1.42848
margin_top = 15.3368
margin_right = 49.4285
margin_bottom = 87.3368
custom_styles/normal = SubResource( 27 )
custom_fonts/normal_font = SubResource( 29 )
text = "        ->"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserInput" type="LineEdit" parent="Console"]
margin_left = 26.0
margin_top = 31.0
margin_right = 1276.0
margin_bottom = 71.0
custom_styles/normal = SubResource( 27 )
custom_fonts/font = SubResource( 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UILayer" type="CanvasLayer" parent="."]
script = ExtResource( 10 )

[node name="ColorRect" type="ColorRect" parent="UILayer"]
visible = false
margin_left = 650.0
margin_top = 43.0
margin_right = 1270.0
margin_bottom = 613.0
color = Color( 0, 0.0470588, 0.301961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Output" type="RichTextLabel" parent="UILayer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/bold_italics_font = SubResource( 31 )
custom_fonts/italics_font = SubResource( 32 )
custom_fonts/bold_font = SubResource( 33 )
custom_fonts/normal_font = SubResource( 34 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="UILayer/ColorRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -20.0
margin_bottom = 20.0
hint_tooltip = "Return to matrix"
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" parent="UILayer" instance=ExtResource( 9 )]
visible = false
margin_left = 527.0
margin_top = 214.0
margin_right = 775.0
margin_bottom = 434.0

[connection signal="pressed" from="Matrix/MatrixBackground/ButtonContainer/OptionsButton" to="UILayer" method="_on_Options_pressed"]
[connection signal="pressed" from="Matrix/MatrixBackground/ButtonContainer/PreviewButton" to="UILayer" method="_on_PreviewButton_pressed"]
[connection signal="pressed" from="Matrix/MatrixBackground/ButtonContainer/GenFileButton" to="UILayer" method="_on_GenFileButton_pressed"]
[connection signal="pressed" from="Matrix/MatrixBackground/ButtonContainer/AboutButton" to="UILayer" method="_on_AboutButton_pressed"]
[connection signal="pressed" from="UILayer/ColorRect/Close" to="UILayer" method="_on_Close_pressed"]
[connection signal="apply_button_pressed" from="UILayer/Menu" to="." method="_on_Menu_apply_button_pressed"]
